# udemy-rust-curso-completo

./: README.md  recursos.txt
async-programming/: Cargo.toml
basic-concepts/: Cargo.toml
concurrency/: creando_threads_source_code_from_course.rs  threads_arc_source_code_from_course.rs  threads_mensajes_source_code_from_course.rs
crypto-prices-wasm/: Cargo.toml
crypto-prices-wasm/src/: lib.rs
crypto-prices-wasm/webapp/: index.html
minigrep/: log.example
ownership/: lifetimes_source_code_from_course.rs  ownership_source_code_from_course.rs
random-number/: Cargo.toml
smart-pointers/: smartpointers_deref_source_code_from_course.rs  smartpointers_drop_source_code_from_course.rs  smartpointers_rc_source_code_from_course.rs  smartpointers_source_code_from_course.rs
sqlite-db/: Cargo.toml  pets-database.db3
tokio-chat-server/: Cargo.toml  README.md
twitter-api-clone/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  twitter-api-clone.postman_collection.json
twitter-api-clone/migrations/2023-08-10-172250_tweets/: down.sql  up.sql
twitter-api-clone/migrations/2023-08-10-172546_likes/: up.sql
twitter-api-clone/src/: main.rs
twitter-api-clone/src/controllers/: likes_controllers.rs  mod.rs  tweet_dto.rs  tweets_controllers.rs
twitter-api-clone/src/models/: like.rs  mod.rs  tweet.rs
twitter-api-clone/src/repository/: database_connection_pool.rs  likes_repository.rs  mod.rs  schema.rs  tweets_repository.rs
web-server/: README.md
youtube-search/: Cargo.toml  README.md  index.html
youtube-search/src/: env.rs  main.rs  youtube.rs
(+62 files in other folders)
