[package]
name = "twitter-api-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
] }
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
